--- a/argux_server/static/css/source/theme.css
+++ b/argux_server/static/css/source/theme.css
@@ -89,6 +89,6 @@ h1 > a {
     margin-bottom: 10px;
 }
 
-.modal-xl > .modal-content {
-    width: 90%;
+.modal-dialog.modal-xl {
+    width: 80%;
 }
