--- a/argux_server/static/css/debug/argux.css
+++ b/argux_server/static/css/debug/argux.css
@@ -96,3 +96,8 @@ h1 > a {
 input[type="text"].username {
     text-transform: lowercase;
 }
+
+.green {
+    background-color: #0f0;
+    height: 40px;
+}
